Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21626

Crash in converting v8 value to QVariant

XMLWordPrintable

    • 20fb62f6040ad8415828092a2b09bd374433505f

      The following crashes when attempting to convert 'a' to a QVariantMap (infinite loop).

      import QtQuick 2.0
      
      Rectangle {
          width: 360
          height: 360
      
          Component.onCompleted: {
              var a = {}
              var b = {}
      
              a.c = b;
              b.c = a;
              return a;
          }
      }
      

      While this isn't the correct fix for this issue, it might also be worth bypassing this particular conversion for signals, as the return value can't be used?

        For Gerrit Dashboard: QTBUG-21626
        # Subject Branch Project Status CR V

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes